--- a/app/views/employees/index.haml
+++ b/app/views/employees/index.haml
@@ -21,7 +21,7 @@
         %td= employee.name
         %td= employee.company    
         %td= employee.email
-        %td= employee.phone
+        %td= number_to_phone(employee.phone, delimiter: ".")
         %td= employee.allow_email
         %td= employee.allow_text
         %td
