--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -26,6 +26,7 @@
       %h3.center Visitor Count
       %h1.center
         = @todays_guests.count
+        = @todays_guests.where("email_notification_status = 'sent' OR text_notification_status = 'sent'").count
 
   .col-sm-6.col-md-4
     .jumbotron
@@ -68,7 +69,7 @@
         %td 
           = guest.email
         %td
-          = number_to_phone(guest.mobile_number, delimiter: ".")
+          = number_to_phone(guest.mobile_number, raise: true, delimiter: ".")
         %td
           = guest.hosting_member ? guest.hosting_member : "No Employee"
         %td
@@ -78,7 +79,7 @@
         %td 
           = guest.created_at.in_time_zone.strftime(" %I:%M %p")
         %td   
-          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "are you sure?", :method => :delete do
+          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :remote => 'true', :method => :delete do
             %i.fa.fa-times
           
   
