--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -79,7 +79,7 @@
         %td 
           = guest.created_at.in_time_zone.strftime(" %I:%M %p")
         %td   
-          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :remote => 'true', :method => :delete do
+          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
             %i.fa.fa-times
           
   
