filters for today, yesterday, week, and month are written and working on visitor count

--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -27,6 +27,8 @@
       %h1.center
         = @todays_guests.count
         = @yesterdays_guests.count
+        = @weeks_guests.count
+        = @months_guests.count
 
   .col-sm-6.col-md-4
     .jumbotron
