--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -56,14 +56,17 @@
 .clearfix
 
 %p
-%h3.panel.panel-default.panel-heading.center.todays_guests Today's Visitors
-%h3.panel.panel-default.panel-heading.center.yesterdays_guests Yesterday's Visitors
-%h3.panel.panel-default.panel-heading.center.weeks_guests This Week's Visitors
-%h3.panel.panel-default.panel-heading.center.months_guests This Month's Visitors
+%h3.panel.panel-default.panel-heading.center
+  .todays_guests Today's Visitors
+  .yesterdays_guests Yesterday's Visitors
+  .weeks_guests This Week's Visitors
+  .months_guests This Month's Visitors
 
 =will_paginate @guests, previous_label: h("Back"), next_label: h("Forward"), renderer: BootstrapPagination::Rails
 
-%table.table.table-striped.table-hover
+// Todays Table
+
+%table.table.table-striped.table-hover.todays_guests
   %thead
     %tr
       %th Name
@@ -99,6 +102,119 @@
           = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
             %i.fa.fa-times
           
+// Yesterdays Table
+
+%table.table.table-striped.table-hover.yesterdays_guests
+  %thead
+    %tr
+      %th Name
+      %th Company
+      %th Email
+      %th Mobile
+      %th Hosting Member
+      %th Visit Reason
+      %th Date
+      %th Time
+      %th Delete
+
+  %tbody
+    - @yesterdays_guests.each do |guest|
+      %tr
+        %td 
+          = guest.name
+        %td
+          = guest.company  
+        %td 
+          = guest.email
+        %td
+          = number_to_phone(guest.mobile_number, raise: true, delimiter: ".")
+        %td
+          = guest.hosting_member ? guest.hosting_member : "No Employee"
+        %td
+          = guest.reason 
+        %td 
+          = guest.created_at.in_time_zone.strftime("%b. %d\, %Y")
+        %td 
+          = guest.created_at.in_time_zone.strftime(" %I:%M %p")
+        %td   
+          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
+            %i.fa.fa-times    
+
+// Weeks Table
+
+%table.table.table-striped.table-hover.weeks_guests
+  %thead
+    %tr
+      %th Name
+      %th Company
+      %th Email
+      %th Mobile
+      %th Hosting Member
+      %th Visit Reason
+      %th Date
+      %th Time
+      %th Delete
+
+  %tbody
+    - @weeks_guests.each do |guest|
+      %tr
+        %td 
+          = guest.name
+        %td
+          = guest.company  
+        %td 
+          = guest.email
+        %td
+          = number_to_phone(guest.mobile_number, raise: true, delimiter: ".")
+        %td
+          = guest.hosting_member ? guest.hosting_member : "No Employee"
+        %td
+          = guest.reason 
+        %td 
+          = guest.created_at.in_time_zone.strftime("%b. %d\, %Y")
+        %td 
+          = guest.created_at.in_time_zone.strftime(" %I:%M %p")
+        %td   
+          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
+            %i.fa.fa-times
+
+// Months Table
+
+%table.table.table-striped.table-hover.months_guests
+  %thead
+    %tr
+      %th Name
+      %th Company
+      %th Email
+      %th Mobile
+      %th Hosting Member
+      %th Visit Reason
+      %th Date
+      %th Time
+      %th Delete
+
+  %tbody
+    - @months_guests.each do |guest|
+      %tr
+        %td 
+          = guest.name
+        %td
+          = guest.company  
+        %td 
+          = guest.email
+        %td
+          = number_to_phone(guest.mobile_number, raise: true, delimiter: ".")
+        %td
+          = guest.hosting_member ? guest.hosting_member : "No Employee"
+        %td
+          = guest.reason 
+        %td 
+          = guest.created_at.in_time_zone.strftime("%b. %d\, %Y")
+        %td 
+          = guest.created_at.in_time_zone.strftime(" %I:%M %p")
+        %td   
+          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
+            %i.fa.fa-times                              
   
 = link_to '<i class="fa fa-cloud-download"></i> Download all guest records (.csv)'.html_safe, url_for(:format => "csv"), :class => 'btn btn-default'    
 %br
