today shows by default, all others hidden by default

--- a/app/assets/stylesheets/modules/overrides.sass
+++ b/app/assets/stylesheets/modules/overrides.sass
@@ -15,4 +15,11 @@ html, body
   margin: 0 auto -60px
   padding: 0 0 60px  
 
+#yesterdays_guests
+  display: none
 
+#weeks_guests
+  display: none
+
+#months_guests
+  display: none
