button function on dashboard now working for today, yesterday, week, month

--- a/app/assets/stylesheets/modules/overrides.sass
+++ b/app/assets/stylesheets/modules/overrides.sass
@@ -15,11 +15,15 @@ html, body
   margin: 0 auto -60px
   padding: 0 0 60px  
 
-#yesterdays_guests
+  
+
+.yesterdays_guests
   display: none
 
-#weeks_guests
+.weeks_guests
   display: none
 
-#months_guests
+.months_guests
   display: none
+
+.box  
