make other button one size larger

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -43,7 +43,7 @@
     %br
       %p Not finding the option you need? 
       %a
-      %button(type="submit" class="btn btn-default btn-xs other-btn")
+      %button(type="submit" class="btn btn-default btn-sm other-btn")
         Click Here
 	
 
