--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -8,7 +8,7 @@
 
   %h2 
     Dashboard - 
-    = current_user.organization.name
+    = @organization.name
     .btn-group.btn-dashboard-nav.pull-right{"data-toggle" => "buttons"}
       %label.btn.btn-default.nav-button-group.active#todays_guests
         %input{type: "radio", value: "todays_guests"} Today
@@ -110,7 +110,7 @@
         %td 
           = guest.created_at.in_time_zone.strftime(" %I:%M %p")
         %td   
-          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
+          = link_to organization_guest_path(@organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
             %i.fa.fa-times
           
 // Yesterdays Table
@@ -148,7 +148,7 @@
         %td 
           = guest.created_at.in_time_zone.strftime(" %I:%M %p")
         %td   
-          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
+          = link_to organization_guest_path(@organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
             %i.fa.fa-times    
 
 // Weeks Table
@@ -186,7 +186,7 @@
         %td 
           = guest.created_at.in_time_zone.strftime(" %I:%M %p")
         %td   
-          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
+          = link_to organization_guest_path(@organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
             %i.fa.fa-times
 
 // Months Table
@@ -224,7 +224,7 @@
         %td 
           = guest.created_at.in_time_zone.strftime(" %I:%M %p")
         %td   
-          = link_to organization_guest_path(current_user.organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
+          = link_to organization_guest_path(@organization.id, guest.id), :confirm => "Are you sure? Guest records shouldn't be deleted. Removing them is perminant and can not be undone.", :method => :delete do
             %i.fa.fa-times                              
   
 = link_to '<i class="fa fa-cloud-download"></i> Download all guest records (.csv)'.html_safe, url_for(:format => "csv"), :class => 'btn btn-default'    
