making notice be in a boostrap 3 class called alert-danger

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -66,11 +66,9 @@
 
       / /.navbar-collapse
     .container
-      #flash
+      #flash  
       -flash.each do |key, value|
-        =key
-        %br
-        =value
+        .alert.alert-danger= value
       = yield
 
   #footer
