added a span.status to guest mobile number

--- a/app/views/guests/_form_model.haml
+++ b/app/views/guests/_form_model.haml
@@ -21,7 +21,7 @@
 
     .form-group
       =# f.label :email, "Mobile Number"
-      %span.status Reason why mobile 
+      %span.status Entering their mobile phone number will text them the guest wifi password 
       = f.text_field :mobile_number, :class => 'form-control', :placeholder => 'Guest Mobile Phone Number (optional)'      
 
     .form-group
