updated logo container and form to remove fixed positioning. Changed fadeOut to hide in jQuery to give a better visualization on form fade

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -18,7 +18,7 @@
 
 .btn-grid
   position: relative
-  padding-top: 18%
+  padding-top: 25px
   /* bottom: 100px
   text-align: center
   height: 100%
@@ -33,11 +33,9 @@
   left: 50% 
 
 .organization-logo-container
-  position: fixed
+  position: relative
   margin-left: -150px
-  top: 50px
   left: 50%
-  z-index: 1
 
 .visitor-ui-home-icon
   position: fixed
@@ -82,7 +80,7 @@
   text-align: center
 
 .form-ui
-  padding-top: 18%
+  padding-top: 25px
   display: none
   top: 100px 
 
