--- a/app/views/guests/_form_tour.haml
+++ b/app/views/guests/_form_tour.haml
@@ -15,7 +15,7 @@
     
     .form-group
       =# f.label :name, "Name"
-      = f.text_field :name, :class => 'form-control input-lg', :placeholder => 'First and Last Name', :required => "true"
+      = f.text_field :name, :class => 'form-control input-lg', :placeholder => 'Guest First and Last Name', :required => "true"
 
     .form-group
       =# f.label :company, "Company Name"
