review/implementation of disabling form btn

--- a/app/views/guests/_form_meeting.haml
+++ b/app/views/guests/_form_meeting.haml
@@ -35,6 +35,7 @@
           
 
       .form-group
+        = f.hidden_field :employee_id
         = f.hidden_field :organization_id, value: @organization_id
         = f.hidden_field :reason, value: 'Meeting'      
 
