updated text on meeting form partial to 'registration will notify' and updated 'no employee' to 'none' on the guest/index page

--- a/app/views/guests/index.haml
+++ b/app/views/guests/index.haml
@@ -105,7 +105,7 @@
         %td
           = number_to_phone(guest.mobile_number, raise: true, delimiter: ".")
         %td
-          = guest.hosting_member ? guest.hosting_member : "No Employee"
+          = guest.hosting_member ? guest.hosting_member : "None"
         %td
           = guest.reason 
         %td 
