--- a/app/views/guests/_form_meeting.haml
+++ b/app/views/guests/_form_meeting.haml
@@ -30,7 +30,7 @@
       .form-group 
         =# f.label :employee_name, "Hosting Member"
         / %span.status I'm here to see:
-        %span.status#notify Your registering will notify:
+        %span.status#notify Registration will notify:
         = f.autocomplete_field :employee_name, autocomplete_employee_name_organization_guests_path, :id => 'employee_autocomplete', :class => 'form-control input-lg', :placeholder => 'Start typing the first and last name of your host', :required => "true"
 
         
