--- a/app/views/employees/index.haml
+++ b/app/views/employees/index.haml
@@ -23,7 +23,7 @@
         %td= employee.name
         %td= employee.company    
         %td= employee.email
-        %td= number_to_phone(employee.phone, raise: true, delimiter: ".")
+        %td= employee.try(:phone)
         %td= employee.allow_email
         %td= employee.allow_text
         %td
