--- a/app/views/guests/_form_dropin.haml
+++ b/app/views/guests/_form_dropin.haml
@@ -17,19 +17,19 @@
       .form-group
       
         =# f.label :name, "Name"
-        = f.text_field :name, :class => 'form-control input-lg', :placeholder => 'First and Last Name', :required => "true"
+        = f.text_field :name, :class => 'form-control input-lg', :placeholder => 'Your First and Last Name', :required => "true"
 
       .form-group
         =# f.label :company, "Company Name"
-        = f.text_field :company, :class => 'form-control input-lg', :placeholder => 'Company'
+        = f.text_field :company, :class => 'form-control input-lg', :placeholder => 'Your Company'
 
       .form-group
         =# f.label :email, "Email Address"
-        = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'Email Address'
+        = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'Your Email Address'
 
       .form-group 
         =# f.label :employee_name, "Hosting Member"
-        = f.text_field :employee_name, :class => 'form-control input-lg', :placeholder => 'Hosting Member', :required => "true"
+        = f.text_field :employee_name, :class => 'form-control input-lg', :placeholder => 'Who are you here to see?', :required => "true"
 
       .form-group
         = f.hidden_field :organization_id, value: @organization_id
