--- a/app/views/guests/_form_meeting.haml
+++ b/app/views/guests/_form_meeting.haml
@@ -17,21 +17,21 @@
       .form-group
       
         =# f.label :name, "Name"
-        = f.text_field :name, :class => 'form-control input-lg', :placeholder => 'Guest First and Last Name', :required => "true"
+        = f.text_field :name, :class => 'form-control input-lg', :placeholder => 'Your First and Last Name', :required => "true"
 
       .form-group
         =# f.label :company, "Company Name"
-        = f.text_field :company, :class => 'form-control input-lg', :placeholder => 'Guest Company Name (optional)'
+        = f.text_field :company, :class => 'form-control input-lg', :placeholder => 'Your Company Name (optional)'
 
       .form-group
         =# f.label :email, "Email Address"
-        = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'Guest Email Address (optional)'
+        = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'Your Email Address (optional)'
 
       .form-group 
         =# f.label :employee_name, "Hosting Member"
         / %span.status I'm here to see:
         %span.status#notify Registration will notify:
-        = f.autocomplete_field :employee_name, autocomplete_employee_name_organization_guests_path, :id => 'employee_autocomplete', :class => 'form-control input-lg', :placeholder => 'Start typing the first and last name of your host', :required => "true"
+        = f.autocomplete_field :employee_name, autocomplete_employee_name_organization_guests_path, :id => 'employee_autocomplete', :class => 'form-control input-lg', :placeholder => 'Who are you here to see?', :required => "true"
 
         
       .form-group
