--- a/app/views/guests/_form_meeting.haml
+++ b/app/views/guests/_form_meeting.haml
@@ -25,7 +25,7 @@
 
       .form-group
         =# f.label :email, "Email Address"
-        = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'Your Email Address (optional)'
+        = f.email_field :email, :class => 'form-control input-lg', :placeholder => 'Your Email Address', :required => "true"
 
       .form-group 
         =# f.label :employee_name, "Hosting Member"
