added countdown javascript code for guests/new to refresh page when no activity

--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -77,3 +77,26 @@
     = link_to image_tag('arrow_left.png', :size => '35x35'), new_organization_guest_path(@organization_id)
 
 
+// Javascript Countdown to refresh page when idle.
+
+:javascript
+  idleTime = 0;
+  $(document).ready(function () {
+      //Increment the idle time counter every minute.
+      var idleInterval = setInterval("timerIncrement()", 60000); // 1 minute
+  
+      //Zero the idle timer on mouse movement.
+      $(this).mousemove(function (e) {
+          idleTime = 0;
+      });
+      $(this).keypress(function (e) {
+          idleTime = 0;
+      });
+  })
+  function timerIncrement() {
+      idleTime = idleTime + 1;
+      if (idleTime > 1) { // 2 minutes
+          window.location.reload();
+      }
+  }
+
