--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -80,23 +80,24 @@
 // Javascript Countdown to refresh page when idle.
 
 :javascript
-  idleTime = 0;
-  $(document).ready(function () {
-      //Increment the idle time counter every minute.
-      var idleInterval = setInterval("timerIncrement()", 60000); // 1 minute
-  
-      //Zero the idle timer on mouse movement.
-      $(this).mousemove(function (e) {
-          idleTime = 0;
-      });
-      $(this).keypress(function (e) {
-          idleTime = 0;
-      });
-  })
-  function timerIncrement() {
-      idleTime = idleTime + 1;
-      if (idleTime > 1) { // 2 minutes
-          window.location.reload();
-      }
-  }
+  var time = 0;
+  function timeIncrement() {
+    time++;
+    console.log(time); //comment this out in production
+    if (time > 120) { // reloads page every 120s
+      window.location.reload();
+    };
+  };
+  $(document).ready(function() {
+    setInterval("timeIncrement()",1000); // Runs this function every second
+    $(this).mousemove(function (e) {
+      time = 0;
+    });
+    $(this).keypress(function (e) {
+      time = 0;
+    });
+  });
+
+
+
 
