--- a/app/assets/stylesheets/modules/overrides.sass
+++ b/app/assets/stylesheets/modules/overrides.sass
@@ -5,9 +5,9 @@ html, body
   background-image: none
   background-color: #fff
 
-#footer
-  height: 60px
-  background-color: #f5f5f5
+// #footer
+//   height: 60px
+//   background-color: #f5f5f5
 
 #wrap
   min-height: 100%
