updated formatting on splash page

--- a/app/views/static_pages/index.haml
+++ b/app/views/static_pages/index.haml
@@ -20,7 +20,7 @@
         %span Donec id elit non mi porta gravida at eget metus.
       %p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
       .main-action
-        %a.btn.btn-lg.btn-danger{href: "#"}> Request a Demo
+        %a.btn.btn-lg.btn-default{href: "#"} Request a Demo
            
         %a.btn.btn-lg.btn-success{href: "#"} Sign up
   %section#features.section.section-center.section-hilite.section-features
@@ -182,31 +182,31 @@
         %span Pricing Table Made Easy
       .pricing-table
         .row
-          .col-md-3.col-sm-6
-            .panel.panel-default
-              %header.panel-heading
-                %h1 Bronze
-                .the-price
-                  $5
-                  %span.subscript / month
-              .panel-body
-                %table.table
-                  %tbody
-                    %tr
-                      %td 1 Account
-                    %tr.active
-                      %td 1 Project
-                    %tr
-                      %td 50K API Access
-                    %tr.active
-                      %td 50MB Storage
-                    %tr
-                      %td Custom Cloud Services
-                    %tr.active
-                      %td Weekly Reports
-              %footer.panel-footer
-                %a.btn.btn-default{href: "#"} Sign up now
-          .col-md-3.col-sm-6
+          / .col-md-3.col-sm-6
+          /   .panel.panel-default
+          /     %header.panel-heading
+          /       %h1 Bronze
+          /       .the-price
+          /         $5
+          /         %span.subscript / month
+          /     .panel-body
+          /       %table.table
+          /         %tbody
+          /           %tr
+          /             %td 1 Account
+          /           %tr.active
+          /             %td 1 Project
+          /           %tr
+          /             %td 50K API Access
+          /           %tr.active
+          /             %td 50MB Storage
+          /           %tr
+          /             %td Custom Cloud Services
+          /           %tr.active
+          /             %td Weekly Reports
+          /     %footer.panel-footer
+          /       %a.btn.btn-default{href: "#"} Sign up now
+          .col-md-4.col-sm-6
             .panel.panel-default
               %header.panel-heading
                 %h1 Silver
@@ -230,7 +230,7 @@
                       %td Weekly Reports
               %footer.panel-footer
                 %a.btn.btn-default{href: "#"} Sign up now
-          .col-md-3.col-sm-6
+          .col-md-4.col-sm-6
             .panel.panel-primary
               %header.panel-heading
                 %h1 Gold
@@ -254,7 +254,7 @@
                       %td Weekly Reports
               %footer.panel-footer
                 %a.btn.btn-primary{href: "#"} Sign up now
-          .col-md-3.col-sm-6
+          .col-md-4.col-sm-6
             .panel.panel-default
               %header.panel-heading
                 %h1 Diamond
@@ -281,26 +281,25 @@
   %section#team.section.section-center.section-hilite.section-team
     .container
       %h3.section-title
-        %span Our Funny Team
+        %span The Team
       .row
+        .col-md-2.col-sm-4.col-xs-0
+          / %img{src: "http://placehold.it/300x300"}/
+          / %h5 Rihanna
+        .col-md-2.col-sm-2.col-xs-0   
         .col-md-2.col-sm-4.col-xs-6
           %img{src: "http://placehold.it/300x300"}/
-          %h5 Rihanna
+          %h5 Brian Martinek
+        / .col-md-2.col-sm-2.col-xs-0  
         .col-md-2.col-sm-4.col-xs-6
           %img{src: "http://placehold.it/300x300"}/
-          %h5 Marry
+          %h5 Roneesh Vashisht
+        .col-md-2.col-sm-2.col-xs-0
+          / %img{src: "http://placehold.it/300x300"}/
+          / %h5 David Beckham
         .col-md-2.col-sm-4.col-xs-6
-          %img{src: "http://placehold.it/300x300"}/
-          %h5 Ronaldo
-        .col-md-2.col-sm-4.col-xs-6
-          %img{src: "http://placehold.it/300x300"}/
-          %h5 Jackie Lord
-        .col-md-2.col-sm-4.col-xs-6
-          %img{src: "http://placehold.it/300x300"}/
-          %h5 David Beckham
-        .col-md-2.col-sm-4.col-xs-6
-          %img{src: "http://placehold.it/300x300"}/
-          %h5 John Doe
+          / %img{src: "http://placehold.it/300x300"}/
+          / %h5 John Doe
   %section#blog.section.section-blog
     .container
       %h2.section-title
@@ -460,10 +459,10 @@
             %img{src: "http://placehold.it/100x100"}/
     .copyright
       %p
-        © 2014 Company, Inc.
+        © 2014 SignInEasy • Built in Chicago
         %br/
-        Theme: Start 1.0.4. Designed by
-        %a{href: "http://www.revotheme.com"} RevoTheme
+        
+        // %a{href: "http://www.revotheme.com"} RevoTheme
 %script{src: "https://code.jquery.com/jquery-1.10.2.min.js"}
 %script{src: "assets/js/bootstrap-3.0.3.min.js"}
 %script{src: "assets/js/jquery.singlePageNav.min.js"}
