--- a/app/views/layouts/splash.haml
+++ b/app/views/layouts/splash.haml
@@ -34,6 +34,6 @@
             %li
               %a{href: "#contact"} Contact
             %li
-              %a.btn.btn-default{href: "#"} Log in
+              %a{href: "#"} Log in
 
     = yield
