--- a/app/views/static_pages/index.haml
+++ b/app/views/static_pages/index.haml
@@ -1,13 +1,13 @@
 %main#main.site-main
   %section#carousel-1.carousel.slide.section-slide{"data-ride" => "carousel"}
     .carousel-inner
-      .item.active{style: "background: url(assets/images/bg-1.jpg);"}
+      .item.active{style: "background: url(assets/bg-1.jpg);"}
         .container
           %img{alt: "First slide", src: "http://placehold.it/640x340"}/
-      .item{style: "background: url(assets/images/bg-2.jpg);"}
+      .item{style: "background: url(assets/bg-2.jpg);"}
         .container
           %img{alt: "First slide", src: "http://placehold.it/640x340"}/
-      .item{style: "background: url(assets/images/bg-3.jpg);"}
+      .item{style: "background: url(assets/bg-3.jpg);"}
         .container
           %img{alt: "First slide", src: "http://placehold.it/640x340"}/
     %a.left.carousel-control{"data-slide" => "prev", href: "#carousel-1"}
