--- a/app/views/guests/_form_model.haml
+++ b/app/views/guests/_form_model.haml
@@ -27,40 +27,23 @@
     .form-group
       %span.status Visit Reason
       %br
-      .btn-group{"data-toggle" => "buttons"}
-        %label.btn.btn-default
-          %input#option1{name: "options", type: "radio"}/
-          Meeting
-        %label.btn.btn-default
-          %input#option2{name: "options", type: "radio"}/
-          Tour
-        %label.btn.btn-default
-          %input#option3{name: "options", type: "radio"}/
-          Event  
-        %label.btn.btn-default
-          %input#option3{name: "options", type: "radio"}/
-          Other
-
+      =f.label :reason, "Meeting"
+      =f.radio_button :reason, "Meeting"
+      =f.label :reason, "Tour"
+      =f.radio_button :reason, "Tour"
+      =f.label :reason, "Event"
+      =f.radio_button :reason, "Event"
+      =f.label :reason, "Other"
+      =f.radio_button :reason, "Other"
 
     %p  
     .form-group 
       =# f.label :employee_name, "Hosting Member"
       %span.status Hosting Member:
-      = f.autocomplete_field :employee_name, autocomplete_employee_name_organization_guests_path, :id => 'employee_autocomplete', :class => 'form-control', :placeholder => 'Start Typing The Hosting Member Name (Autocomplete)', :required => "true"
-      
-      = f.hidden_field :reason, value: 'Meeting'  
-
-    %p
-    %p
-    %p
-    %br
-    %br
-    %br
-    %br
-    %br
-    %br    
+      = f.autocomplete_field :employee_name, autocomplete_employee_name_organization_guests_path, :id => 'employee_autocomplete', :class => 'form-control', :placeholder => 'Start Typing The Hosting Member Name (Autocomplete)', :required => "true" 
 
     .form-group
+      = f.hidden_field :employee_id
       = f.hidden_field :organization_id, value: @organization_id
            
     .modal-footer  
